test/error/ast/CallExpectVarParam.mod
MODULE CallExpectVarParam;
PROCEDURE P(VAR x: INTEGER); END P;
BEGIN
  P(1);
END CallExpectVarParam.
